// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RedisClient getBroadcast parses a Bitcoin broadcast: Bitcoin broadcast 1`] = `
{
  "tx_out_id": {
    "hash": "0x1234",
  },
}
`;

exports[`RedisClient getBroadcast parses a Ethereum broadcast: Ethereum broadcast 1`] = `
{
  "tx_out_id": {
    "signature": {
      "k_times_g_address": [],
      "s": [],
    },
  },
}
`;

exports[`RedisClient getBroadcast parses a Polkadot broadcast: Polkadot broadcast 1`] = `
{
  "tx_out_id": {
    "signature": "0x1234",
  },
}
`;
